@@ -125,3 +125,22 @@ class TestDuplSet:
             ? c
             ? a
             """))
+
+
+class TestDumpLoadUnicode:
+    # test triggered by SamH on stackoverflow (https://stackoverflow.com/q/45281596/1307905)
+    # and answer by randomir (https://stackoverflow.com/a/45281922/1307905)
+    def test_write_unicode(self, tmpdir):
+        yaml = YAML()
+        text_dict = {"text": u"HELLO_WORLD©"}
+        file_name = str(tmpdir) + '/tstFile.yaml'
+        yaml.dump(text_dict, open(file_name, 'w'))
+        assert open(file_name, 'rb').read().decode('utf-8') == u'text: HELLO_WORLD©\n'
+
+    def test_read_unicode(self, tmpdir):
+        yaml = YAML()
+        file_name = str(tmpdir) + '/tstFile.yaml'
+        with open(file_name, 'wb') as fp:
+            fp.write(u'text: HELLO_WORLD©\n'.encode('utf-8'))
+        text_dict = yaml.load(open(file_name, 'r'))
+        assert text_dict["text"] == u"HELLO_WORLD©"
